[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/final.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[node name="final" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -23.0
margin_top = -10.0
margin_right = 567.0
margin_bottom = 742.0
color = Color( 0.180392, 0.172549, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Label" parent="."]
margin_left = 69.6354
margin_top = 408.03
margin_right = 482.635
margin_bottom = 529.03
custom_fonts/font = SubResource( 1 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart_button" type="Button" parent="restart"]
modulate = Color( 0, 0, 0, 0 )
margin_left = -1.3922
margin_top = 14.97
margin_right = 404.608
margin_bottom = 113.97
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu" type="Label" parent="."]
margin_left = 25.1882
margin_top = 569.945
margin_right = 537.188
margin_bottom = 690.945
custom_fonts/font = SubResource( 1 )
text = "MAIN MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menu_button" type="Button" parent="main_menu"]
modulate = Color( 0, 0, 0, 0 )
margin_left = -1.0
margin_top = 15.0
margin_right = 511.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 6.75684
margin_top = 220.271
margin_right = 550.757
margin_bottom = 389.271
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hs" type="Label" parent="."]
margin_left = -1.27051
margin_top = 5.48569
margin_right = 542.729
margin_bottom = 203.486
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="restart/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="main_menu/main_menu_button" to="." method="_on_main_menu_button_pressed"]
